@@ -373,6 +373,7 @@ io_progress_fg(const io_progress_t *const state, int progress)
 	const char *target_name;
 	char *as_part;
 	const char *item_name;
+	int item_num;
 
 	const ioeta_estim_t *const estim = state->estim;
 	progress_data_t *const pdata = estim->param;
@@ -417,13 +418,15 @@ io_progress_fg(const io_progress_t *const state, int progress)
 		as_part = format_str("\nas   %s", target_name);
 	}
 
+	item_num = MIN(estim->current_item + 1, estim->total_items);
+
 	if(progress < 0)
 	{
 		/* Simplified message for unknown total size. */
 		draw_msgf(title, ctrl_msg,
 				"In %s\nItem %d of %d\n%s\n%s\nfrom %s%s",
-				ops->target_dir, estim->current_item + 1, estim->total_items,
-				total_size_str, item_name, src_path, as_part);
+				ops->target_dir, item_num, estim->total_items, total_size_str,
+				item_name, src_path, as_part);
 	}
 	else
 	{
@@ -433,9 +436,9 @@ io_progress_fg(const io_progress_t *const state, int progress)
 				"Location: %s\nItem:     %d of %d\nOverall:  %s/%s (%2d%%)\n"
 				" \n" /* Space is on purpose to preserve empty line. */
 				"file %s\nfrom %s%s%s",
-				ops->target_dir, estim->current_item + 1, estim->total_items,
-				current_size_str, total_size_str, progress/IO_PRECISION, item_name,
-				src_path, as_part, file_progress);
+				ops->target_dir, item_num, estim->total_items, current_size_str,
+				total_size_str, progress/IO_PRECISION, item_name, src_path, as_part,
+				file_progress);
 
 		free(file_progress);
 	}
