@@ -82,6 +82,8 @@
 	"!" or "?", which shouldn't be preferred over corresponding builtin
 	abbreviation.
 
+	Fixed "(n + 1) of n" in detailed progress dialog.
+
 0.7.8 to 0.8-beta
 
 	Removed per-view last search pattern.  Don't worry, you probably won't
